[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "curlify"
version = "3.0.0"
authors = [
  { name="Egor Orlov", email="oeegor@gmail.com" },
]
license = {text = "MIT License"}
description = "Convert Requests request objects to curl commands."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
  "requests",
]

[project.urls]
"Homepage" = "https://github.com/ofw/curlify"
"Bug Tracker" = "https://github.com/ofw/curlify/issues"

[tool.setuptools]
py-modules = [
  "curlify",
]

[tool.bumpver]
current_version = "3.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]
